--- a/form.html
+++ b/form.html
@@ -39,13 +39,11 @@
                 <div class="success-icon">✅</div>
                 <h3>Thank you!</h3>
                 <p>Your details have been submitted successfully!</p>
-                
-                <!-- PDF Download Status -->
-                <div id="downloadStatus" class="download-status">
-                    <p>📥 Downloading PDFs automatically...</p>
-                </div>
+                <p>📥 PDFs are opening in new browser tabs...</p>
                 
                 <!-- Manual Download Buttons -->
+                <div class="manual-downloads">
+                    <p><strong>📄 Download your PDFs:</strong></p>
                 <div id="manualDownloads" class="manual-downloads" style="display:none;">
                     <p><strong>Download your PDFs:</strong></p>
                     <div class="download-buttons">
