Updated pdf button

--- a/form.html
+++ b/form.html
@@ -128,7 +128,7 @@
                             📄 Download Education Catalogue
                         </a>
                     </div>
-                    <p class="download-note">💡 If downloads don't start automatically, click the buttons above</p>
+                    <p class="download-note">💡 Click the buttons above to download your PDFs manually</p>
                 </div>
             </div>
             
