--- a/form.html
+++ b/form.html
@@ -112,16 +112,16 @@
                 </div>
                 
                 <!-- Manual Download Buttons -->
-                <div id="manualDownloads" class="manual-downloads" style="display:none;">
+                <div id="manualDownloads" class="manual-downloads" style="display:block;">
                     <p><strong>Download your PDFs:</strong></p>
                     <div class="download-buttons">
-                        <a href="https://drive.google.com/uc?export=download&id=1uWRiR1mT50MBFL3-u9PsHMbh7YpnKuFk" 
+                        <a href="https://drive.google.com/uc?export=download&id=13kpFhw8HOVzAv5DdWHqOMQVeaiJLdv1C" 
                            target="_blank" 
                            class="btn-download" 
                            download="PENTA-LaboCatalogue.pdf">
                             📄 Download PENTA Lab Catalogue
                         </a>
-                        <a href="https://drive.google.com/uc?export=download&id=13kpFhw8HOVzAv5DdWHqOMQVeaiJLdv1C" 
+                        <a href="https://drive.google.com/uc?export=download&id=1_zutQh_MSIdv7N5k7n1Suw4HhRXpgyvr" 
                            target="_blank" 
                            class="btn-download" 
                            download="EDUC-CAT.pdf">
