--- a/form.html
+++ b/form.html
@@ -108,7 +108,7 @@
                 
                 <!-- PDF Download Status -->
                 <div id="downloadStatus" class="download-status">
-                    <p>📥 Downloading PDFs automatically...</p>
+                    <p>📥 Opening PDF downloads in new tabs...</p>
                 </div>
                 
                 <!-- Manual Download Buttons -->
