--- a/form.html
+++ b/form.html
@@ -108,7 +108,7 @@
                 
                 <!-- PDF Download Status -->
                 <div id="downloadStatus" class="download-status">
-                    <p>📥 Downloading both PDFs now...</p>
+                    <p>📥 Downloading all 3 PDFs now...</p>
                 </div>
                 
                 <!-- Manual Download Buttons -->
@@ -126,6 +126,12 @@
                            class="btn-download" 
                            download="EDUC-CAT.pdf">
                             📄 Download Education Catalogue
+                        </a>
+                        <a href="https://drive.google.com/uc?export=download&id=1hpguDRpuJq7f7xHt12WoPfy6ZzB8v_nk" 
+                           target="_blank" 
+                           class="btn-download" 
+                           download="Third-Document.pdf">
+                            📄 Download Third Document
                         </a>
                     </div>
                     <p class="download-note">💡 Click the buttons above to download your PDFs manually</p>
