Updated pdf links and text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <!-- Tagline -->
         <h1 class="tagline">Welcome to GESS 2025</h1>
-        <p class="subtitle">Scan the QR code below to get started</p>
+        <p class="subtitle">Scan the QR code</p>
         
         <!-- QR Code Container -->
         <div class="qr-wrapper">
