--- a/form.html
+++ b/form.html
@@ -115,23 +115,23 @@
                 <div id="manualDownloads" class="manual-downloads" style="display:block;">
                     <p><strong>Download your PDFs:</strong></p>
                     <div class="download-buttons">
-                        <a href="https://drive.google.com/uc?export=download&id=13kpFhw8HOVzAv5DdWHqOMQVeaiJLdv1C" 
+                        <a href="https://drive.google.com/uc?export=download&id=1hpguDRpuJq7f7xHt12WoPfy6ZzB8v_nk" 
                            target="_blank" 
                            class="btn-download" 
-                           download="PENTA-LaboCatalogue.pdf">
-                            📄 Download PENTA Lab Catalogue
+                           download="Penta Profile 2025.pdf">
+                            📄 Download Penta Profile 2025
                         </a>
                         <a href="https://drive.google.com/uc?export=download&id=1_zutQh_MSIdv7N5k7n1Suw4HhRXpgyvr" 
                            target="_blank" 
                            class="btn-download" 
-                           download="EDUC-CAT.pdf">
-                            📄 Download Education Catalogue
+                           download="Penta-LaboCatalogue.pdf">
+                            📄 Download Penta-LaboCatalogue
                         </a>
-                        <a href="https://drive.google.com/uc?export=download&id=1hpguDRpuJq7f7xHt12WoPfy6ZzB8v_nk" 
+                        <a href="https://drive.google.com/uc?export=download&id=1B-ADJ0Sq5u0uYiBEosDJUDCE9IFmfuS8" 
                            target="_blank" 
                            class="btn-download" 
-                           download="Third-Document.pdf">
-                            📄 Download Penta Profile 2025
+                           download="Penta-Educational Lab-Catalogue.pdf">
+                            📄 Download Penta-Educational Lab-Catalogue
                         </a>
                     </div>
                     <p class="download-note">💡 Click the buttons above to download your PDFs manually</p>
