Updated pdf links

--- a/form.html
+++ b/form.html
@@ -125,13 +125,13 @@
                            target="_blank" 
                            class="btn-download" 
                            download="Penta-LaboCatalogue.pdf">
-                            📄 Download Penta-LaboCatalogue
+                            📄 Download Penta-Labo Catalogue
                         </a>
                         <a href="https://drive.google.com/uc?export=download&id=1B-ADJ0Sq5u0uYiBEosDJUDCE9IFmfuS8" 
                            target="_blank" 
                            class="btn-download" 
                            download="Penta-Educational Lab-Catalogue.pdf">
-                            📄 Download Penta-Educational Lab-Catalogue
+                            📄 Download Penta-Educational Lab Catalogue
                         </a>
                     </div>
                     <p class="download-note">💡 Click the buttons above to download your PDFs manually</p>
